omit negative resp_times from baseline, rename EDA file

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -5,7 +5,7 @@
    "id": "35754b01-a072-4794-815a-0f3db5f9f00a",
    "metadata": {},
    "source": [
-    "# CSE 158 Assignment 2 EDA"
+    "# CSE 158 Final Project/Assignment 2 EDA"
    ]
   },
   {
